# Cpp_Challenge

./: .~lock.problems.pptx#  Advoi_Ghost_Room.cpp  Array_RePlace.cpp  CMakeLists.txt  CMakeSettings.json  Dockerfile  Even_Array and Odd_Array  LargestNumber.cpp  Longest_String.cpp  Rejected some opponents in Array  Reversing of array  Sin(x)_checking.cpp  Strictly_Increasing.cpp  _PathForPreparing.md  alphabeticShift.cpp  arrayMaximalAdjacentDifference.cpp  converted lowercase to uppercase  finding _a_char_in_a_string.cpp  fromKali.txt  isIPv4Address.cpp  isLand.cpp  palindromeRearrange.cpp  problems.pptx  readme.md  reverseInParentheses.cpp  settingDocForUbuntu  update.bat  variableName.cpp
C_Solving/: CMakeLists.txt  Sin(x)_checking.cpp  Sine.cpp  Sine.h  __Exercise3.h  _countZeros.h  allOfSum.h  arrayProblems.h  chuyenDoiCoSo.h  giaiThua.cpp  giaithua.h  main.cpp  problemsOfPrinting.h  ptBac2.h  soTrungGian.h  sortArray.h  source.h  supported.h
C_Solving/examples/: CMakeLists.txt  main.cpp  run
C_Solving/include/: solvingC.h
C_Solving/src/: solvingC.cpp
CodeSignal/: CMakeLists.txt
CodeSignal/Intro/: Rain_of_ReasonAlphabeticShift.cpp
CodeSignal/Intro/Dark_Wilderness/: BishopandPawn.cpp  GrowingPlant.cpp  Knapsack_Light.cpp  LongestDigitsPrefix.cpp
CodeSignal/Intro/Diving_Deeper/: differentSymbolNaive.cpp  extractEachKth.cpp
CodeSignal/Intro/Eruption_of_Light/: BeautifulString.cpp  Find_Email_Domain.cpp  IsMAC48Address.cpp  buildPalindrome.cpp
CodeSignal/Intro/Exploring_the_Waters/: AlternatingSums.cpp  AreSimilar.cpp  ArrayChange.cpp
CodeSignal/Intro/Island_of_Knowledge/: AreEquallyStrong.cpp  ArrayMaximalAdjacentDifference.cpp  IsIPv4Address.cpp
CodeSignal/Intro/Land_of_Logic/: DigitalProduct.cpp  Sudoku.cpp  differentSquare.cpp  spiralNumbers.cpp
CodeSignal/Intro/Rain_of_Reason/: EvenDigitsOnly.cpp
CodeSignal/Intro/RainbowOfClarify/: IsDitgit.cpp  lineEndcoding.cpp
CodeSignal/Intro/Smooth_Sailing/: All_Longest_String.cpp  Longest_String.cpp  SortByHeight.cpp
CodeSignal/Intro/Through_the_Frog/: AbsoluteValuesSumMinimization.cpp
CodeSignal/TheCore/Corner Of 0s and 1s/: differentRightmostBit.cpp  equalPairOfBit.cpp  swapAdjacentBit.cpp
CodeSignal/TheCore/IntroGates/: Candies.cpp  LargestNumber.cpp  circleOfNumber.cpp  lateRide.cpp  maxMultiple.cpp  questionCorrectionBot.cpp
CodeSignal/TheCore/Lab_of_Transformations/: alphanumericLess.cpp  characterParity.cpp  cipher26.cpp  decipher.cpp  higherVersion.cpp  newNumeralSystem.cpp  reflectString.cpp  stolenLunch.cpp
CodeSignal/TheCore/Labyrinth_of_Nested_Loops/: comfortableNumbers.cpp
CodeSignal/TheCore/MirrorLake/: numberOfClans.cpp  stringConstruction.cpp
CodeSignal/TheCore/Spring_of_Integration/: arrayConversion.cpp  arrayPreviousLess.cpp  beautifulText.cpp  comb.cpp  cyclicString.cpp  pairOfShoes.cpp  runnerMeeting.cpp  stringsCrossover.cpp
CodeSignal/TheCore/Well_of_Integration/: Elections_Winner.cpp  addBorder.cpp  minimalNumberOfCoins.cpp  switchLights.cpp
CodeSignal/examples/: CMakeLists.txt  main.cpp
CodeSignal/include/: Core.h  Intro.h  common.h  supportedFunction.h
CodeSignal/src/: Core.cpp
DataStructure/: CMakeLists.txt
DataStructure/examples/: CMakeLists.txt  main.cpp
DataStructure/include/: BST.h  dataStructure.h  linkedlist.h
DataStructure/src/: dataStructure.cpp
Graph/: CMakeLists.txt
Graph/DrawingOfGraph/: DrawingOfGraph_Dijkstra
Graph/examples/: CMakeLists.txt  main.cpp
Graph/include/: Graph.h
Graph/src/: Graph.cpp
HackerRank/: CMakeLists.txt
HackerRank/Easy/: vectorSorting.cpp
HackerRank/Easy/2DArray/: reverseArray.cpp
HackerRank/Medium/: attributeParse.cpp
HackerRank/examples/: CMakeLists.txt  main.cpp
HackerRank/include/: arrayProblems.h
HackerRank/src/: arrayProblems.cpp
IOLib/: CMakeLists.txt
IOLib/examples/: CMakeLists.txt  main.cpp
IOLib/include/: IOLibrary.h
IOLib/src/: IOLibrary.cpp
LeetCode/: CMakeLists.txt
LeetCode/Easy/: addBinary.cpp  implemented_strStr().cpp  longestCommonPrefix.cpp  postorderTraversal.cpp  removeDuplicates.cpp  searchInsertPosition.cpp  singleNumber.cpp  twoSum.cpp  validParatheneses.cpp
LeetCode/Medium/: Integer_to_Roman.cpp  combinationSum.cpp  longestPalindromeSubString.cpp  stringAtoi.cpp
LeetCode/examples/: .main.cpp.swp  CMakeLists.txt  main.cpp
LeetCode/include/: common.h  data.h  easyLevel.h  hardLevel.h  leetCode.h  mediumLevel.h
LeetCode/src/: easyLevel.cpp  hardLevel.cpp  leetCode.cpp  mediumLevel.cpp
Some_Challenges/: Advoi_Ghost_Room.cpp  CMakeLists.txt  Deleting_a_cols_in_Two-dimensional arrays.cpp  Display_symmetrical_numbers_in_range.cpp  Even_Array_&_Odd_Array.cpp  Finding _a_char_in_a_string.cpp  Finding_occurence_of_X_in_two_dimension_array.cpp  LargestNumber.cpp  Reject_some_opponents_in_Array.cpp  Reversing_of_array.cpp  Special_Prime_Number.cpp  Strictly_Increasing.cpp  converted_lowercase_to_uppercase.cpp
University/: CMakeLists.txt
University/examples/: CMakeLists.txt  test.cpp
University/include/: complex.h
University/src/: complex.cpp
_universeProject/app/: CMakeLists.txt
_universeProject/app/examples/: CMakeLists.txt  circleDrawing.cpp  main.cpp  shaderSetup.cpp  sunMonEarth.cpp  triangleDrawing.cpp
_universeProject/app/include/: _button.h  _common_dic.h  _reference.h
_universeProject/app/src/: _button.cpp
_universeProject/management/: CMakeLists.txt
_universeProject/management/examples/: CMakeLists.txt  main.cpp
_universeProject/management/include/: Controller.h  Developer.h  Display.h  Employee.h  Manager.h  common.h
_universeProject/management/src/: Controller.cpp  Developer.cpp  Display.cpp  Employee.cpp
codeForce/: CMakeLists.txt  minMaxSwap.cpp  testingFunction.cpp
codeForce/examples/: CMakeLists.txt  testingFunction.cpp
codeForce/include/: codeForce.h
socket/: CMakeLists.txt
socket/config/: setupCan.sh
socket/examples/: CMakeLists.txt  ansynchronousTimer.cpp  handleBinding.cpp  handleFunction.cpp  multithreadTimer.cpp  synchronousTimer.cpp
socket/include/: libSocket.h
socket/src/: libSocket.cpp
(+190 files in other folders)
